Fix navbar to top of screen
Also remove whitespace between navbar and background

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,6 +20,7 @@ body {
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
   margin-bottom: 2em;
+  margin-top: 4em;
 }
 
 /*
