--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,9 @@ nav {
   display: flex;
   justify-content: space-between;
   text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 #tweeter-logo {
